# Change Log - Format to be decided
# Dates are in GMT and in DD/MM/YY format
# Changes made on the Framework components that are copied here will not be logged

06/01/05 - nigelj
* Cleaned CHANGELOG

07/01/05 - nigelj
* Fixed imports in ircbpcommon.py

15/01/05 - nigelj
* Extending the lists (SQL update to come shortly)
* Making privcheck(ircbpcommon.py) more advanced and using flag levels
* Simplified the SQL Queries again
* Made all the privcheck calls ask for certain levels...