@@ -136,13 +136,13 @@ while (1):
                         # He/She is, making sure that they provided a channel - We will need a string check on this too.
                         if len(msg) > 4:
                             # Something has being provided, need to make sure it is a channel for now by only checking if it has # at the start
-                            if msg[4][0] == "#":
+                            if msg[4][0] == "#" and not ircbpcommon.ischanmember(msg[4]):
                                 # All ok, adding the channel to the array, JOIN sent normally because we have gone past the time of dojoin
                                 ircbpcommon.addchan(msg[4])
                                 ircbpcommon.irccommand("JOIN " + msg[4])
                             else:
                                 # Not a channel, return error
-                                ircbpcommon.irccommand("PRIVMSG " + CHANNEL + " :" + msg[4] + " is not a channel")
+                                ircbpcommon.irccommand("PRIVMSG " + CHANNEL + " :" + msg[4] + " is not a channel or I am already in it.")
                         else:
                             # Nothing provided, syntax error!
                             ircbpcommon.irccommand("PRIVMSG " + CHANNEL + " :Syntax error, correct syntax is: !join \x02<channel>\x02")
@@ -167,13 +167,13 @@ while (1):
                 if string.upper(string.lstrip(msg[3], ':')) == string.upper('!part'):
                     if ircbpcommon.privcheck(HOSTMASK):
                         if len(msg) > 4:
-                            if msg[4][0] == "#":
+                            if msg[4][0] == "#" and ircbpcommon.ischanmember(msg[4]):
                                 print "Parting!"
                                 ircbpcommon.irccommand("PRIVMSG " + msg[4] + " :buh-bye now! =)")
                                 ircbpcommon.irccommand("PART " + msg[4] + " :Part from %s" % nick_name)
                                 ircbpcommon.remchan(msg[4])
                             else:
-                                ircbpcommon.irccommand("PRIVMSG " + CHANNEL + " :" + msg[4] + " is not a channel")
+                                ircbpcommon.irccommand("PRIVMSG " + CHANNEL + " :" + msg[4] + " is not a channel or I am not in it.")
                         else:
                             ircbpcommon.irccommand("PRIVMSG " + CHANNEL + " :buh-bye now! =)")
                             ircbpcommon.irccommand("PART " + CHANNEL + " :Part from %s" % nick_name)
